# LocalLLM

./: .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  SPECS.md  llm-local  plan.md  pyproject.toml
.omc/sessions/: 5cba322f-2206-4692-aea1-052e07b67c4a.json
clients/ocr-extract/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
clients/open-webui/: .env.example  README.md  docker-compose.yml
config/: runtime-catalog.yaml  validation-commands.yaml
datasets/: prepare_cccd_qwen3_vl.py
docs/: ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  HARNESS.md  HARNESS_BACKLOG.md  README-vi.md  README.md  TEST_MATRIX.md  spec-intake-llm-local.md
docs/decisions/: 0004-docker-compose-shared-network.md  0005-gpu-budget-allocation.md  0006-serving-presets.md
docs/product/: README.md  domains.md  overview.md
docs/runbooks/: cccd-gt-evaluation.md  ollama-golden-path.md
docs/stories/: backlog.md
evaluation/: Dockerfile  docker-compose.yml
evaluation/scripts/: run_benchmark.py  run_cccd_gt_eval.py  run_lm_eval.sh
evaluation/tests/: test_cccd_gt_eval.py
llm_local/: __init__.py  catalog.py  cccd_compare.py  cccd_schema.py  cli.py  validation.py
models/: assemble_registry.py  convert.sh  download_model.py  manage.py  presets.py  presets.yaml  registry.yaml  validate_registry.py  validate_registry.sh
models/GLM-OCR/: model.yaml
observation/: .env.example  docker-compose.yml
observation/prometheus/: prometheus.yml
observation/scripts/: ollama_exporter.py
scripts/: preflight.py  smoke.sh
serving/litellm/: .env.example  README.md  (+2 more)
(+68 files in other folders)
