[project]
name = "llm-local"
version = "0.1.0"
description = "Local LLM infrastructure for serving, training, evaluation, and observation"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.20.0",
    "ruamel-yaml>=0.18.0",
]

[project.optional-dependencies]
convert = [
    "gguf>=0.6.0",
    "torch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_local", "models", "serving"]
